Overview: I want to insert an existing file "Zwei.fodt" in another existing file "Eins.fodt". This results in an "Read error: Error reading file". Steps to Reproduce: 1. Opening an existing document "Eins.fodt" 2. Clicking "Insert -> Document". 3. Selecting another existing document "Zwei.fodt" Actual Results: LO displays a message "Read error: Error reading file". Expected Results: The content of file "Zwei.fodt" is inserted in file "Eins.fodt" at and below the cursor. Build Date & Hardware: Version: 5.0.4.2 Build ID: 2b9802c1994aa0b7dc6079e128979269cf95bc78 on Linux Mint 17 Qiana, KDE 64-bit Additional Builds and Platforms: Not checked with other builds and platforms. Additional Information: 1. I'm aware of Bug 94374 - Insert -> Document: "Read-Error. Error reading file." for DOCX files 2. Work-around 2.1 Saving file "Eins.fodt" as "Eins.odt" and file "Zwei.fodt" as "Zwei.odt". 2.2 Opening file "Eins.odt". 2.3 Inserting file "Zwei.odt". This works just fine. Only the FODT document format seems to be affected. If I can provide any further information or help, please ask. Martin "vi"
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e4124396cafc2b0a435f17a66b33e36303ae4e4 tdf#96713 OdfFlatXml: Seek to 0 before reading It will be available in 5.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Will also backport to stable branches soon.
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "libreoffice-5-1": http://cgit.freedesktop.org/libreoffice/core/commit/?id=22383b1002a63084be91d29ebff229cffdd6cf97&h=libreoffice-5-1 tdf#96713 OdfFlatXml: Seek to 0 before reading It will be available in 5.1.0.2. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "libreoffice-5-0": http://cgit.freedesktop.org/libreoffice/core/commit/?id=47f6e49e2a204a00ac631f9fa021d6320752d039&h=libreoffice-5-0 tdf#96713 OdfFlatXml: Seek to 0 before reading It will be available in 5.0.5. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.